--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 Style="color:purple">Hola mundo,elving</h1>
 <h1 Style="color:purple">RICARDO ACTUALIZO </h1>
+<h1 Style="color: green">Juan ACTUALIZO </h1>
